@@ -1,13 +1,11 @@
 \name{NAME}
 \alias{NAME}
-\docType{data}
 \title{
 	Rcpp module: %% ~~ Name of the module ~~
 }
 \description{
 	Rcpp module %%  ~~ A concise description of the module ~~
 }
-\usage{data(yada)}
 \details{
 	The module contains the following items: 
 	
